syntax = "proto3";

package rival.api.v1;

option go_package = "rival/gen/proto/proto/api";

import "proto/schema/schema.proto";

service AuthService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse);
  rpc ResendOTP(ResendOTPRequest) returns (ResendOTPResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc FirebaseLogin(FirebaseLoginRequest) returns (FirebaseLoginResponse);
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc WhoAmI(WhoAmIRequest) returns (WhoAmIResponse);
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string phone = 4;
  rival.schema.v1.UserRole role = 5;
}

message SignupResponse {
  string message = 1;
  bool otp_sent = 2;
}

message VerifyOTPRequest {
  string email = 1;
  string otp = 2;
}

message VerifyOTPResponse {
  string access_token = 1;
  string refresh_token = 2;
  rival.schema.v1.User user = 3;
  int64 expires_in = 4;
}

message ResendOTPRequest {
  string email = 1;
}

message ResendOTPResponse {
  string message = 1;
  bool otp_sent = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  rival.schema.v1.User user = 3;
  int64 expires_in = 4;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
  bool otp_sent = 2;
}

message ResetPasswordRequest {
  string email = 1;
  string otp = 2;
  string new_password = 3;
}

message ResetPasswordResponse {
  string message = 1;
  bool success = 2;
}

message FirebaseLoginRequest {
  string firebase_token = 1;
}

message FirebaseLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  rival.schema.v1.User user = 3;
  int64 expires_in = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}

message WhoAmIRequest {
  // Token will be in headers/metadata
}

message WhoAmIResponse {
  rival.schema.v1.User user = 1;
}
